# SWTL001

./: CHANGELOG.md  CMakeLists.txt  README.md  prj.conf
application/inc/: configuration_z.h  lr1110_modem_1.1.9.h  lr1121_modem_05020001.h  lr1121_transceiver_0103.h  lr11xx_firmware_update.h  version.h
application/src/: gui.c  lr1121_modem_hal.c  lr11xx_firmware_update.c  main.c
lr1121_modem_driver/: CHANGELOG.md  README.md
lr1121_modem_driver/src/: lr1121_modem_hal.h  lr1121_modem_modem.c
